infra/k8s/cues-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: cues-srv
spec:
  type: NodePort
  selector:
    app: cues
  ports: 
    - name: cues
      protocol: TCP
      port: 4000
      targetPort: 4000
