infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx 
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: cues.com
      http:
        paths:
          - path: /cues/create
            pathType: Prefix
            backend:
              service:
                name: cues-clusterip-srv
                port: 
                  number: 4000
          - path: /cues
            pathType: Prefix
            backend:
              service:
                name: query-srv
                port: 
                  number: 4002
          - path: /cues/?(.*)/offers
            pathType: Prefix
            backend:
              service:
                name: offers-srv
                port: 
                  number: 4001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port: 
                  number: 3000
